--- a/test/fixtures/scanned_votes.yml
+++ b/test/fixtures/scanned_votes.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  single_vote: one
+  voting_form: one
   candidate: one
 
 two:
-  single_vote: two
+  voting_form: two
   candidate: two
